--- a/Hotel/ApplicationPorts/pom.xml
+++ b/Hotel/ApplicationPorts/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>DomainModel</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>UI</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
