--- a/Hotel/UserInterface/UIModel2/pom.xml
+++ b/Hotel/UserInterface/UIModel2/pom.xml
@@ -7,6 +7,7 @@
         <groupId>pl.lodz.p.it</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>UIModel2</artifactId>
