--- a/Hotel/RestPorts/pom.xml
+++ b/Hotel/RestPorts/pom.xml
@@ -35,6 +35,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8</version>
+        </dependency>
     </dependencies>
 
 
