--- a/Hotel/SoapServices/pom.xml
+++ b/Hotel/SoapServices/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>SoapServices</artifactId>
     <dependencies>
@@ -18,10 +19,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>pl.lodz.p.it</groupId>
-            <artifactId>SoapPorts</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-maven-plugin</artifactId>
+            <version>2.3.3-b01</version>
         </dependency>
     </dependencies>
 
