--- a/Hotel/pom.xml
+++ b/Hotel/pom.xml
@@ -96,6 +96,12 @@
             <version>4.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>jaxws-maven-plugin</artifactId>
+            <version>2.6</version>
+        </dependency>
+
     </dependencies>
 
 </project>
