--- a/Hotel/pom.xml
+++ b/Hotel/pom.xml
@@ -96,6 +96,12 @@
             <version>4.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.jws</groupId>
+            <artifactId>jsr181-api</artifactId>
+            <version>1.0-MR1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
