--- a/Hotel/UserInterface/UIControllers/pom.xml
+++ b/Hotel/UserInterface/UIControllers/pom.xml
@@ -37,6 +37,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>SoapServices</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180813</version>
