--- a/Hotel/pom.xml
+++ b/Hotel/pom.xml
@@ -102,6 +102,18 @@
             <version>1.0-MR1</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>rt</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
