--- a/Hotel/SoapServices/pom.xml
+++ b/Hotel/SoapServices/pom.xml
@@ -30,7 +30,13 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>ClientSoap</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>com.sun.xml.ws</groupId>-->
 <!--            <artifactId>jaxws-maven-plugin</artifactId>-->
 <!--            <version>2.3.3-b01</version>-->
