--- a/Hotel/RestServices/pom.xml
+++ b/Hotel/RestServices/pom.xml
@@ -36,6 +36,13 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
