--- a/UserService/ApplicationCore/pom.xml
+++ b/UserService/ApplicationCore/pom.xml
@@ -8,8 +8,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <version>1.0-SNAPSHOT</version>
     <artifactId>ApplicationCore</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>ApplicationServices</module>
+        <module>DomainModel</module>
+    </modules>
 
 
 </project>
