--- a/UserService/ApplicationPorts/pom.xml
+++ b/UserService/ApplicationPorts/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>ApplicationPorts</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>DomainModel</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
