--- a/UserService/ApplicationPorts/pom.xml
+++ b/UserService/ApplicationPorts/pom.xml
@@ -16,6 +16,14 @@
             <groupId>pl.lodz.p.it</groupId>
             <artifactId>DomainModel</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>RepositoriesAdapters</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
