--- a/UserService/ApplicationCore/ApplicationServices/pom.xml
+++ b/UserService/ApplicationCore/ApplicationServices/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>DomainModel</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>ApplicationPorts</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
