Przygotowania do użycia RabbitMQ

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ UserService/ApplicationPorts/target/
 UserService/RepositoriesAdapters/target/
 
 UserService/ApplicationCore/DomainModel/target/
+
+UserService/MQController/target/
