--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -12,6 +12,7 @@
         <module>ApplicationCore</module>
         <module>RepositoriesAdapters</module>
         <module>ApplicationPorts</module>
+        <module>MQController</module>
     </modules>
 
     <properties>
@@ -36,6 +37,7 @@
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
         </dependency>
+
     </dependencies>
 
 </project>
