--- a/Hotel/pom.xml
+++ b/Hotel/pom.xml
@@ -115,6 +115,12 @@
             <version>2.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.9.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
