--- a/Hotel/UserInterface/UIControllers/pom.xml
+++ b/Hotel/UserInterface/UIControllers/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>UIControllers</artifactId>
     <packaging>war</packaging>
+
     <dependencies>
         <dependency>
             <groupId>pl.lodz.p.it</groupId>
@@ -42,7 +43,14 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>MQController</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -51,15 +59,6 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <jakartaee>8.0</jakartaee>
     </properties>
-
-    <!--    <dependencies>-->
-    <!--        <dependency>-->
-    <!--            <groupId>com.mycompany</groupId>-->
-    <!--            <artifactId>ApplicationServices</artifactId>-->
-    <!--            <version>1.0-SNAPSHOT</version>-->
-    <!--            <scope>compile</scope>-->
-    <!--        </dependency>-->
-    <!--    </dependencies>-->
 
     <build>
         <plugins>
