--- a/Hotel/ApplicationCore/ApplicationServices/pom.xml
+++ b/Hotel/ApplicationCore/ApplicationServices/pom.xml
@@ -21,7 +21,9 @@
             <groupId>pl.lodz.p.it</groupId>
             <artifactId>ApplicationPorts</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
 
