--- a/UserService/ApplicationCore/ApplicationServices/pom.xml
+++ b/UserService/ApplicationCore/ApplicationServices/pom.xml
@@ -21,6 +21,12 @@
 
         <dependency>
             <groupId>pl.lodz.p.it</groupId>
+            <artifactId>MQController</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
             <artifactId>ApplicationPorts</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
