--- a/UserService/MQController/pom.xml
+++ b/UserService/MQController/pom.xml
@@ -17,6 +17,13 @@
             <artifactId>amqp-client</artifactId>
             <version>5.9.0</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>pl.lodz.p.it</groupId>-->
+<!--            <artifactId>ApplicationServices</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 
