--- a/UserService/MQController/pom.xml
+++ b/UserService/MQController/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>war</packaging>
 
     <artifactId>MQController</artifactId>
 
@@ -18,11 +19,11 @@
             <version>5.9.0</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>pl.lodz.p.it</groupId>-->
-<!--            <artifactId>ApplicationServices</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>ApplicationServices</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
