--- a/Hotel/MQController/pom.xml
+++ b/Hotel/MQController/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>amqp-client</artifactId>
             <version>5.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>pl.lodz.p.it</groupId>
+            <artifactId>UIModel2</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
